// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for 's submitScreenEvent destination action: all fields 1`] = `
Object {
  "data": "Home",
  "kind": "Screen",
  "leadRefs": Array [
    Object {
      "type": "client-id",
      "value": "user1234",
    },
    Object {
      "type": "client-id",
      "value": "anonId1234",
    },
    Object {
      "type": "email",
      "value": "sajvoji@monarwi.pk",
    },
  ],
  "timestamp": 1671371213652,
  "type": "tracking",
  "url": "kwF&9l73A",
  "userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 9_1 like Mac OS X) AppleWebKit/601.1.46 (KHTML, like Gecko) Version/9.0 Mobile/13B143 Safari/601.1",
  "values": Object {
    "anonymousId": "kwF&9l73A",
    "data": "kwF&9l73A",
    "email": "sajvoji@monarwi.pk",
    "kind": "kwF&9l73A",
    "referrerUrl": "kwF&9l73A",
    "timestamp": "2021-02-01T00:00:00.000Z",
    "url": "kwF&9l73A",
    "userAgent": "kwF&9l73A",
    "userId": "kwF&9l73A",
  },
}
`;

exports[`Testing snapshot for 's submitScreenEvent destination action: required fields 1`] = `
Object {
  "data": "Home",
  "kind": "Screen",
  "leadRefs": Array [
    Object {
      "type": "client-id",
      "value": "user1234",
    },
    Object {
      "type": "client-id",
      "value": "anonId1234",
    },
  ],
  "timestamp": 1671371213632,
  "type": "tracking",
  "url": "https://segment.com/academy/",
  "userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 9_1 like Mac OS X) AppleWebKit/601.1.46 (KHTML, like Gecko) Version/9.0 Mobile/13B143 Safari/601.1",
  "values": Object {
    "data": "kwF&9l73A",
    "kind": "kwF&9l73A",
  },
}
`;
